change formatXml to text based - works on all browsers and is less strict regarding input fix wrapping for FF and Edge fix copy on FF and Edge

--- a/tools/css/site.css
+++ b/tools/css/site.css
@@ -5,23 +5,21 @@ html {
 
 .start textarea {
     width: 100%;
-    padding: 10px;
+    padding: 3px;
     font-family: "Courier New";
     margin: 0;
     border: none;
+
+    background: url(http://i.imgur.com/2cOaJ.png);
+    background-attachment: local;
+    background-repeat: no-repeat;
 }
 
-.start .textarea textarea {
-    font-family: "Courier New";
-    font-size: 14px;
-}
-
-.start .textarea.input-group {
-    padding: 0;
-}
-
-.start .textarea.input-group label {
-    top: 12px;
+textarea,
+pre {
+    -moz-tab-size : 4;
+    -o-tab-size : 4;
+    tab-size : 4;
 }
 
 .errorMessage {
@@ -52,6 +50,10 @@ textarea {
 }
 
 textarea.nowrap {
+    white-space: pre;
+}
+
+.edge textarea.nowrap {
     white-space: nowrap;
 }
 
